PRERELEASE 0.0.1:
- Official pre-release

PRERELEASE 0.0.2:
- Fixed an issue with 1.8 compatibility
- Fixed a bug where indicators would show even if damage/heal event was cancelled by another plugin
- Fixed a bug where indicators would show for entities like armor stands or boats

PRERELEASE 0.0.3:
- Fixed indicators showing in no pvp zones
- Fixed indicators randomly showing in other worlds
- Added options to bold, italicised and underline indicators
- Updated default config

PRERELEASE 0.1.0:
- Display for 0-damage items now use the format under "damage-format" instead of "heal-format"
- Slight changes to default config
- Added "disabled-worlds" option in config
- Added commands
- Added configurable messages
- Rewrote internal file utilities
- Fixed an issue with indicators showing "-0" on low heals
- Fixed an issue with incorrect indicators showing on /kill

1.0.0:
- Initial release

1.1.0:
- Added feature to disable indicators for specified entity types
- Added feature to toggle health indicators displayed below player name
- Added 1.17.1 support
- Dropped 1.17 support (will be re-added in the next update)

1.1.1:
- Fixed 1.17 and 1.17.1 compatibility
- Fixed issue with health indicator conflicting with other plugin scoreboards

1.1.2:
- Fixed a few bugs with health indicators
- Updated default messages.yml

1.1.3:
- Fixed the bottom of the default help page being too short.
- Fixed tab completer returning player names in slots with no args.
- Fixed error when a player is damaged/ healed after disabling health-indicators with "/di reload".
- Fixed error when enabling health-indicators on 1.13+ servers.
- Fixed the plugin failing to load if another plugin or the server didn't initialize SQLite.